adding comments to the page
